<resources>
    <string name="app_name">Mobilne PWR</string>
    <string name="import_title">Importowanie planu</string>
    <string name="all_courses_title">Wszystkie kursy</string>
    <string name="home_title">Strona główna</string>
    <string name="add_deadline_title">Dodaj nowy termin</string>
    <string name="add_note_title">Dodaj nową notatke</string>
    <string name="all_courses_desc">Wszystkie kursy</string>
    <string name="import_desc">Importowanie planu</string>
    <string name="home_desc">Strona główna</string>
    <string name="course_details_title">Szczegóły kursu</string>
    <string name="fab_desc">FAB akcja</string>
    <string name="prev_week_desc">Poprzedni tydzień</string>
    <string name="next_week_desc">Następny tydzień</string>
    <string name="fab_import_title">Jak znaleźć link?</string>
    <string name="fab_import_step_1">1. Wejdź na stronę swojego USOSa.</string>
    <string name="fab_import_step_2">2 .Otwórz zakładkę MÓJ USOSWEB.</string>
    <string name="fab_import_step_3">3. Kliknij PLAN ZAJĘĆ.</string>
    <string name="fab_import_step_4">4. Kliknij eksportuj.</string>
    <string name="fab_import_step_5">5. Skopiuj link i wklej go do aplikacji.</string>
    <string name="edit_deadline_title">Edytuj termin</string>
    <string name="edit_note_title">Edytuj notatke</string>
    <string name="add_button_label">Dodaj</string>
    <string name="save_button_label">Zapisz</string>
    <string name="cancel_button_label">Anuluj</string>
    <string name="description_label">Opis</string>
    <string name="title_label">Tytuł</string>
    <string name="date_label">Data</string>
    <string name="date_placeholder">DD/MM/YYYY</string>
    <string name="import_error_text">Wystąpił błąd podczas importu. Sprawdź link i spróbuj ponownie.</string>
    <string name="import_error_title">Błąd</string>
    <string name="ok_button_title">Ok</string>
    <string name="import_confirm_title">Potwierdź import</string>
    <string name="import_confirm_text">W bazie istnieje już plan zajęć. Importowanie nowego planu spowoduje usunięcie poprzedniego planu oraz wszystkich powiązanych danych. Czy na pewno chcesz kontynuować?</string>
    <string name="yes_button_title">Tak</string>
    <string name="no_button_title">Nie</string>
    <string name="link_label">Link</string>
    <string name="import_button_title">Importuj</string>
    <string name="photos_tab_title">Twoje zdjęcia:</string>
    <string name="dates_tab_title">Twoje obecności:</string>
    <string name="notes_tab_title">Twoje notatki:</string>
    <string name="deadlines_tab_title">Twoje terminy:</string>
</resources>